--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
-								<li><a href="#experience">Experience</a></li>
+								<li><a href="#cv">CV</a></li>
 								<li><a href="#skills">Skills</a></li>
 								<li><a href="#projects">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -61,9 +61,9 @@
 							<p><i>Podcasts</i>: The Joe Rogan Experience, Lex Fridman Podcast, The Bill Simmons Podcast, 2 Bears 1 Cave, The Ryen Russillo Podcast</p>
 						</article>
 
-						<!-- Experience -->
-							<article id="experience">
-								<h1 class="major">Experience</h1>
+						<!-- CV -->
+							<article id="cv">
+								<h1 class="major">CV</h1>
 
 								<h2>Education</h2>
 								<dl>
@@ -162,6 +162,13 @@
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/to-do.jpg" alt="" /></span>
 								<p>Below you can find a collection of my work in an attempt to demonstrate my current level of skills & abilities.</p>
+
+								<h3>online-cv</h3>
+								<p>This repository is a demonstration on how to create a personal website for my CV.</p>
+								<nav>
+									<a href="https://github.com/jmulleavey/online-cv" class="button"><span class="label">GitHub Repository</span></a>
+									<a href="https://jmulleavey.github.io/online-cv/" class="button"><span class="label">Project Description</span></a>
+								</nav>
 							</article>
 
 						<!-- Contact -->
