--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 										<li>Linear Regression</li>
 										<li>Lasso & Ridge Regularization</li>
 										<li>Data Visualization</li>
-										<li><i>[developing]</i> Binary Classification</li>
-										<li><i>[developing]</i> Multi-Class Classification</li>
+										<li>Binary Classification</li>
+										<li>Multi-Class Classification</li>
 										<li><i>[developing]</i> Principal Component Analysis</li>
 									</ul></dd>
 								</dl>
