--- a/index.html
+++ b/index.html
@@ -69,12 +69,25 @@
 								<dl>
 									<dt><p>Universita degli Studi di Padova | 2023</p></dt>
 									<dd><p>MSc <i>Cognitive Neuroscience</i></p></dd>
+									<nav>
+										<a href="https://openbadges.bestr.it/public/assertions/ae0ArgFDSAqJDPTt1B2n8Q" class="button"><span class="label">Open Badge</span></a>
+									</nav>
 									<dt><p>University of Oregon | 2020</p></dt>
 									<dd><p>BA <i>Psychology</i></p></dd>
 								</dl>
 
 								<h2>Experience</h2>
 								<dl>
+									<dt><p>Lab of Dr. Paola Rigo | Department of Developmental Psychology & Socialization</p></dt>
+									<dd><p><i>Research Intern</i> | March 2023 - November 2023</p></dd>
+										<ul>
+											<li>Extraction of child & dyadic interaction clips using video editing software for later use as behavioral stimuli in fMRI research.</li>
+											<li>Pre-processing & Analysis of subject fMRI data using the SPM toolbox in MATLAB.</li>
+											<li>Preparation & Calibration of NIRS montage for an auditory-based functional experiment.</li>
+											<li>Data Cleaning & Analysis of behavioral questionnaire data using Excel.</li>
+											<li>Gather & Summarize studies for literature review on Hyperscanning between Parent--Child dyads.</li>
+										</ul>
+
 									<dt><p>State of New Hampshire | John Sununu Youth Services Center</p></dt>
 									<dd><p><i>Youth Counselor</i> | August 2020 - March 2021</p></dd>
 										<ul>
@@ -114,6 +127,9 @@
 
 								<h2>Research Contributions</h2>
 								<dl>
+									<dt><p>Thesis</p></dt>
+									<dd>Mulleavey, J. (2023). Maternal Neural Responses to Infant Cues: effects of Caregiving Experience, Stress & Retrospective Remembrances of Parental Care.</dd>
+
 									<dt><p>Coder</p></dt>
 									<dd>Berkamn, E., & Wilson, S. (2020). So Useful As  A Good Theory? The Practicality Crisis in (Social) 
 										Psychological Theory. Perspectives on Psychological Science. doi: 10.31234/osf.io/h3nwd</dd>
