--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
 									<a href="https://github.com/jmulleavey/online-cv" class="button"><span class="label">GitHub Repository</span></a>
 									<a href="https://jmulleavey.github.io/online-cv/" class="button"><span class="label">Project Description</span></a>
 								</nav>
+
+								<h3>Master's Thesis</h3>
+								<p><i>Abstract:</i> Parents are central to the early development of their child and subsequently their future outcomes later in life. Some of the ways in which parenting behavior is expressed are more adaptive than others, such as responding in a sensitive & responsive manner when a child expresses their needs. How a given individual comes to parent in the way that they do is dependent on many different personal, social & contextual factors. In addition, emerging family structures provide an opportunity to study new variables within the mother—child relationship. Investigation into how these various factors interact is therefore necessary. In the current study, the functional brain responses to auditory infant cues were examined in 16 healthy lesbian mothers of 3 to 11 year old children. In response to infant cries, mothers showed neural activation in regions related to emotion regulation and abstract & sensory—motor representations of the cry stimulus itself in comparison to a control sound. In relation to measures of maternal behavior, it was found that moderate levels of maternal sensitivity are significantly associated with the highest level of activation within the Superior Temporal Gyrus. Brain responses were also observed for comparison between infant cries and baby laughs, as well as baby laughs and a control sound. Taken together, results from this study indicate that mothers recall memories related to infant cries presumably experienced with their own children. Additionally, current findings suggest that new stimuli be used in further research on mothers with children in middle to late childhood.</p>
+								<p><i>Keywords:</i> fMRI, Parental Brain, Infant Cries, Infant Laughs, Stress</p>
+								<p><i>Supervisor:</i> Dr. Paola Rigo</p>
+								<nav>
+									<a href="https://thesis.unipd.it/retrieve/ac834580-1a20-40ba-aade-2b8311d0ac20/Mulleavey_Jacob.pdf" class="button"><span class="label">Thesis PDF</span></a>
+								</nav>
 							</article>
 
 						<!-- Contact -->
