Added ML Project
- Added GitHub repo & all other relevant files for a Machine Learning project under the 'Projects' page

--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
 								<nav>
 									<a href="https://thesis.unipd.it/retrieve/ac834580-1a20-40ba-aade-2b8311d0ac20/Mulleavey_Jacob.pdf" class="button"><span class="label">Thesis PDF</span></a>
 								</nav>
+
+								<h3>Machine Learning Project</h3>
+								<p><i>Description:</i> UniPd Masters Project demonstrating my understanding of course content & skill in implementing basic machine learning model that predicts whether a given individual has had a stroke or not based on all other provided health and demographic data.</p>
+								<nav>
+									<a href="https://github.com/jmulleavey/ML_Project" class="button"><span class="label">GitHub Repository</span></a>
+									<a href="https://github.com/jmulleavey/ML_Project/blob/41901692ddcfa1984af96f82daaa38c5750c39af/README.md" class="button"><span class="label">README</span></a>
+									<a href="https://github.com/jmulleavey/ML_Project/blob/41901692ddcfa1984af96f82daaa38c5750c39af/Mulleavey_Project.py" class="button"><span class="label">Code</span></a>
+								</nav>
 							</article>
 
 						<!-- Contact -->
